--- a/src/SCSS/viewdesigns/_login-register.scss
+++ b/src/SCSS/viewdesigns/_login-register.scss
@@ -14,7 +14,8 @@
     display: flex;
     flex-direction: column;
 
-    input {
+    input,
+    select {
       width: 400px;
       margin-bottom: 20px;
       border-radius: 5px;
