changes in the css

--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -1,3 +1,5 @@
 @use "./viewdesigns/welcome";
 @use "./viewdesigns/login-register";
 @use "./viewdesigns/home";
+@use './viewdesigns/profile';
+@use './viewdesigns/update-profile';
