--- a/src/SCSS/viewdesigns/_profile.scss
+++ b/src/SCSS/viewdesigns/_profile.scss
@@ -1,39 +1,40 @@
-@use '../abstract/mixins' as *;
-@use '../components/job-component';
+@use "../abstract/mixins" as *;
+@use "../components/job-component";
 
 .profile-div {
-    @include flexCenter();
-    
+  @include flexCenter();
 
-    .outer-div {
-        margin-top: 20px;
-        display: flex;
-        gap: 20px;
-        width: 55%;
-        border: 2px solid black;
-        padding: 5px;
-        border-radius: 10px;
-        
-        
+  .outer-div {
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    width: 55%;
+    border: 2px solid black;
+    padding: 5px;
+    border-radius: 10px;
 
-        .image-div {
-            display: flex;
-            align-items: start;
-            img {
-                object-fit: none;
-                display: flex;
-            }
-        }
+    .image-div {
+      display: flex;
+      align-items: start;
+      max-width: 180px;
+      max-height: 180px;
 
-        .update-profile {
-            cursor: pointer;
-        }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
+
+    .update-profile {
+      cursor: pointer;
+    }
+  }
 }
 
 .job-component-title {
-    flex-grow: 1;
-    font-size: 20px;
-    font-weight: 600;
-    margin: 30px 0px;
+  flex-grow: 1;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 30px 0px;
 }
