--- a/src/SCSS/viewdesigns/_welcome.scss
+++ b/src/SCSS/viewdesigns/_welcome.scss
@@ -23,3 +23,11 @@
 
   font-size: abstract.getFontSize("large");
 }
+
+.news-header {
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-size: 1.6rem;
+}
