--- a/src/SCSS/components/_job-component.scss
+++ b/src/SCSS/components/_job-component.scss
@@ -1,43 +1,49 @@
 .ctc-job-component {
-    height: 100%;
-    display: flex;
-    align-items: end;
-    // text-align: end;
+  height: 100%;
+  display: flex;
+  align-items: end;
+  // text-align: end;
 }
 
 .job-tile {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    // flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  // flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+.jobs-parent {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .jobs {
-    border: 2px solid black;
-    display: flex;
-    height: 100%;
-    width: 50%;
-
-
+  border: 2px solid black;
+  display: flex;
+  height: 100%;
+  width: 50%;
 }
 
 .job-component-desc {
-    flex-grow: 1;
-    margin-left: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
+  flex-grow: 1;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
 }
 
 .job-component-cname {
-    margin-left: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
